<resources>
    <string name="app_name">Guardian Messenger</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_new_user">Register New User</string>
    <string name="register">Register</string>
    <string name="register_subtitle">Please register to login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_subtitle">Please login to continue</string>
    <string name="message">Message</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="request_chat_logs">Request Chat Logs</string>
    <string name="request_outreach">Request Outreach</string>
    <string name="message_hint">Type your message</string>
    <string name="contact_name">Contact Name</string>
    <string name="search">Search</string>
    <string name="create_chat">Create New Chat</string>
    <string name="manage_account">Manage Account</string>
    <string name="update_acct">Update Account</string>
    <string name="delete_acct">Delete Account</string>
    <string name="search_users">Search Users</string>
    <string name="send_mass_message">Send Mass Message</string>
    <string name="submit_mass_message">Submit Mass Message</string>
    <string name="remove_mass_message">Remove Mass Message</string>
    <string name="outreach">Outreach</string>
    <string name="enter_employee_id">Enter employee id</string>
    <string name="submit_request">Submit Request</string>
    <string name="enter_the_id_of_the_employee_you_would_like_permission_to_message_below">Enter the email of the employee you would like permission to message below</string>
    <string name="outreach_page">Outreach Page</string>
    <string name="back">Go back</string>
    <string name="name">Name</string>
    <string name="position">position</string>
    <string name="department">Department</string>
    <string name="salary">Salary</string>
    <string name="age">age</string>


</resources>