<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/message_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/message" />


        <Button
            android:id="@+id/request_outreach_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/request_outreach" />

        <Button
            android:id="@+id/request_chat_logs"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/request_chat_logs" />

        <Button
            android:id="@+id/manage_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/manage_account" />

        <Button
            android:id="@+id/mass_message_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/send_mass_message" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:text="@string/logout" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/massMsgWindow"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/errorSymbol"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_error_24"
            app:tint="@color/purple" />

        <TextView
            android:id="@+id/massMsgText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>