<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBaseline_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_new_user"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_margin="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:layout_marginBottom="0dp"
            android:id="@+id/email_id"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="0dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:id="@+id/registerButton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>