<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/login_subtitle"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:layout_margin="0dp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:strokeColor="@color/purple"
            app:strokeWidth="3dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>