<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ManageAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/purple_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/manageAccountTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="?attr/homeAsUpIndicator"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/manageAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manage_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/textFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBar"
        app:layout_constraintVertical_bias="0.309">

        <LinearLayout
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nameImage"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_account_box_24" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/light_gray"
                android:ems="10"
                android:inputType="text"
                android:text="Name"
                android:textColor="@color/hint_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/positionField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/positionImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/baseline_work_24" />

            <EditText
                android:id="@+id/positionInput"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/light_gray"
                android:ems="10"
                android:inputType="text"
                android:text="Position"
                android:textColor="@color/hint_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/departmentField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/departmentImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/baseline_workspaces_24" />

            <EditText
                android:id="@+id/departmentInput"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/light_gray"
                android:ems="10"
                android:inputType="text"
                android:text="Department"
                android:textColor="@color/hint_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/salaryField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/salaryImage"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/baseline_attach_money_24" />

            <EditText
                android:id="@+id/salaryInput"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/light_gray"
                android:ems="10"
                android:inputType="text"
                android:text="Salary"
                android:textColor="@color/hint_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageField"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ageImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:srcCompat="@drawable/baseline_cake_24" />

            <EditText
                android:id="@+id/ageInput"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:ems="10" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/delete_acct"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        app:layout_constraintVertical_bias="0.119"
        app:strokeColor="@color/purple"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/update_acct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manage or Update Your Account Information"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBar"
        app:layout_constraintVertical_bias="0.529" />

</androidx.constraintlayout.widget.ConstraintLayout>